# Customer-Churn-Prediction

./: .cursorignore  .cursorindexingignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
app/: dashboard.py
docs/: architecture.md  evaluation.md  metrics.md  status.md  workflow.mmd
notebooks/: 01_eda.ipynb
src/: run_train.py
src/data/: __init__.py  load.py  schema.py
src/evaluation/: __init__.py  explain.py  metrics.py
src/features/: __init__.py  preprocess.py
src/models/: __init__.py  train.py
src/utils/: __init__.py  paths.py
tests/: test_imports.py  test_load.py  test_metrics.py  test_paths.py  test_preprocess.py  test_schema.py
tests/fixtures/: telco_sample.csv
