[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Portfolio-grade customer churn modelling and evaluation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.3",
    "mypy>=1.8",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "ruff>=0.4",
    "pandas-stubs>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
